[package]

name = "peresil"
version = "0.4.0-alpha.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]

description = "A simple and simplistic string parsing library"
readme = "README.md"
keywords = ["parser"]

homepage = "https://github.com/shepmaster/peresil"
repository = "https://github.com/shepmaster/peresil"
documentation = "https://shepmaster.github.io/peresil/"

license = "MIT"

[features]
default = ["combinators", "bytes"]
combinators = []
bytes = ["paste"]

[dependencies]
paste = { version = "1", optional = true }
snafu = { version = "0.6", optional = true }